--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <img src = "https://jdyz.jdjy.sh.cn/public/jdyz/images/logo.png"/>
 
         <footer>
-          <p>Footer</p>
+          <p>Screw this.</p>
         </footer>
 
     </body>
