--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<html>
+<html></html>
     <head>
         <title>D.A.W.N BASE</title>
     </head>
@@ -11,8 +11,11 @@
 
         <img src = "https://jdyz.jdjy.sh.cn/public/jdyz/images/logo.png"/>
 
+        <video width="640" height="360" controls>
+            <source src="https://upos-sz-mirror08c.bilivideo.com/upgcxcode/36/24/25665472436/25665472436-1-192.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1726921242&gen=playurlv2&os=08cbv&oi=2018263300&trid=99d5ee5042f84e5f85bba6a4315c7bd5T&mid=3546655628462543&platform=html5&og=hw&upsig=dc8bc69c0807c6a0a712f0bb05d020c0&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&bvc=vod&nettype=0&bw=29048&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000" type="video/mp4">
+        </video>
         <footer>
-          <p>Screw this.</p>
+          <p>WE ARE THE FRONT LINE.</p>
         </footer>
 
     </body>
