Update index.html and add support channel

--- a/index.html
+++ b/index.html
@@ -1,22 +1,22 @@
-<html></html>
-    <head>
-        <title>D.A.W.N BASE</title>
+<head>
+        <title>OpDawn</title>
     </head>
     <body>
 
         <nav>Operation D.A.W.N</nav>
-
+        <img width="180" height="180" src="https://img03.sogoucdn.com/v2/thumb/retype_exclude_gif/ext/auto/q/85?appid=200698&url=https://pic.baike.soso.com/ugc/baikepic2/0/20240506130640-524442197_jpeg_640_640_79464.jpg/800">
         <h1>Who are we?</h1>
-        <p>D.A.W.N is a student group active in JDYZ.We are a legion.Expect us.</p>
+        <p>D.A.W.N is a student group that current active in JDYZ.Expect us.</p>
+        
+        <h1>Listen to a good Song</h1>
+            <video width="640" height="360" controls>
+                <source src="https://upos-sz-mirror08c.bilivideo.com/upgcxcode/36/24/25665472436/25665472436-1-192.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1726921242&gen=playurlv2&os=08cbv&oi=2018263300&trid=99d5ee5042f84e5f85bba6a4315c7bd5T&mid=3546655628462543&platform=html5&og=hw&upsig=dc8bc69c0807c6a0a712f0bb05d020c0&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&bvc=vod&nettype=0&bw=29048&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000" type="video/mp4">
+            </video>
 
-        <img src = "https://jdyz.jdjy.sh.cn/public/jdyz/images/logo.png"/>
-
-        <video width="640" height="360" controls>
-            <source src="https://upos-sz-mirror08c.bilivideo.com/upgcxcode/36/24/25665472436/25665472436-1-192.mp4?e=ig8euxZM2rNcNbRVhwdVhwdlhWdVhwdVhoNvNC8BqJIzNbfq9rVEuxTEnE8L5F6VnEsSTx0vkX8fqJeYTj_lta53NCM=&uipk=5&nbs=1&deadline=1726921242&gen=playurlv2&os=08cbv&oi=2018263300&trid=99d5ee5042f84e5f85bba6a4315c7bd5T&mid=3546655628462543&platform=html5&og=hw&upsig=dc8bc69c0807c6a0a712f0bb05d020c0&uparams=e,uipk,nbs,deadline,gen,os,oi,trid,mid,platform,og&bvc=vod&nettype=0&bw=29048&orderid=0,1&buvid=&build=0&mobi_app=&f=T_0_0&logo=80000000" type="video/mp4">
-        </video>
-        <footer>
-          <p>WE ARE THE FRONT LINE.</p>
-        </footer>
-
+        <h1>Support Us</h1>
+            <p><b>WE ARE THE FRONTLINE</b>,but we also need financial support.</p> 
+            <p><i>cryptocurrency support channel 1</i>:bc1qrzy5qvr9v77r8szllld297d6v84eq2a0snn8tw</p>
+            <p><i>cryptocurrency support channel 2</i>:bc1qsm2q3mkyfd6fjqtjjepxqm6zg8gr5m0za82w6j</p>
+            <p><i>cryptocurrency support channel 3</i>:bc1qjwgcmpwgz7la37ptuhmesluk74ryct7jzqv0ts</p>
     </body>
 </html>
